Implemented search implementation

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,7 @@
             <input name="text">
             <input type="submit">
         </form>
+        <div> {{result}} </div>
     </body>
 
 </html>
