--- a/app/static/styles/home_page.css
+++ b/app/static/styles/home_page.css
@@ -4,5 +4,45 @@ body {
   width: 25%;
   border: 3px solid darkseagreen;
   /* top, right, bottom and left padding  */
-  padding: 100px 100px 100px 100px;
+  padding: 20px 100px 100px 100px;
+}
+
+.container input {
+  width: 100%;
+  clear: both;
+}
+
+.container input[type=submit]{
+  background-color: mediumseagreen;
+}
+
+a {
+  color: seagreen;
+}
+
+a:visited {
+  color: red;
+}
+
+h1 {
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+
+h3 {
+  text-align: center;
+}
+
+h4 {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
 }
