--- a/app/templates/info.html
+++ b/app/templates/info.html
@@ -7,7 +7,9 @@
 
     <body>
 
-        <h2>InnoGruk Search Engine: <a href="/home">Home</a></h2>
+        <img src="static/img/logo.png" alt="Italian Trulli" style="width:300px;">
+
+        <h2>Groogle Search Engine: <a href="/home">Home</a></h2>
         <hr>
 
         <h4> Here you can add your advertisment in the future </h4>
